--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,10 +72,12 @@ body {
   -------------- */
 .img-content {
     height: 27.875em;
-    background: hsl(277, 64%, 61%);
+    background: hsl(276.7, 74.2%, 25.9%);
 }
 
 .img-content img {
+    width: 33.75em; 
+    height: 27.875em;
     opacity: .5;
 }
 
@@ -136,7 +138,7 @@ body {
     }
 
     .img-content {
-        background: hsl(277, 52%, 42%);
+        background: hsl(276.7, 74.2%, 25.9%);
         width: 18em;
         margin: 0 auto;
         position: absolute;
@@ -144,6 +146,8 @@ body {
     }
 
     .img-content img {
+        width: 33.75em; 
+        height: 15em;
         opacity: .38;
     }
 
