--- a/src/css/main.css
+++ b/src/css/main.css
@@ -86,24 +86,23 @@ body {
     border-bottom-right-radius: 1em;
 }
 
-@media (max-width:375px){
+@media (max-width:475px){
 
     .main-container {
-        margin: 3em 0;
+        margin-top: 3em;
     }
 
     .text-content {
-        width: 18em;
-        height: 37.3em;
-        margin-top: 14em;
-        padding: 1em;
-        border-bottom-left-radius: 1em;
+        width: 22em;
+        height: 32.3em;
+        margin-top: 2em;
+        padding: 2em;
         border-bottom-right-radius: 1em;
         border-top-left-radius: 0;
     }
 
     .text-content .text-info {
-        width: 16em;
+        width: 18em;
         margin-bottom: 2em;
     }
 
@@ -113,6 +112,7 @@ body {
 
     .text-content .text-info h1 {
         margin-bottom: .6em;
+        font-size: 1.8em;
     }
 
     .data-information {
@@ -139,14 +139,13 @@ body {
 
     .img-content {
         background: hsl(276.7, 74.2%, 25.9%);
-        width: 18em;
+        width: 22em;
         margin: 0 auto;
         position: absolute;
         top: 3em;
     }
 
     .img-content img {
-        width: 33.75em; 
         height: 15em;
         opacity: .38;
     }
@@ -158,3 +157,54 @@ body {
     }
 
 }
+
+@media (max-width:425px){
+
+    .text-content {
+        width: 20em;
+        margin-top: 4em;
+        padding: 1em;
+    }
+
+    .img-content {
+        width: 20em;
+    }
+
+}
+
+@media (max-width:375px){
+
+    .main-container {
+        height: auto;
+    }
+
+    .text-content {
+        width: 19em;
+        height: 29.3em;
+        margin-top: 14em;
+        padding: 1.37em;
+    }
+
+    .text-content .text-info {
+        width: 16em;
+        margin-bottom: 2em;
+    }
+
+    .text-content .text-info p {
+        font-size: .938em;
+    }
+
+    .text-content .text-info h1 {
+        font-size: 1.688em;
+    }
+
+    .data-information span {
+        font-size: 0.875em;
+    }
+
+    .img-content {
+        width: 19em;
+    }
+}
+
+
